--- a/src/front/public/index.html
+++ b/src/front/public/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <script src="/js/draw.js"></script>
     <link rel="stylesheet" href="/css/sample.css">
 </head>
 
@@ -33,6 +32,8 @@
         <button type="submit" id="post">post</button>
         <div id="postResult" />
     </div>
+
+    <script type="text/javascript" src="/js/draw.js"></script>
 </body>
 
 </html>
